<resources>
    <string name="app_name">Konnekt 3</string>
    <string name="action_settings">Settings</string>
    <string name="choose">Change Board Size</string>
    <string name="main">Main Menu</string>
    <string name="exit">Exit Game</string>
    <string name="load">Load Game</string>
    <string name="newGame">New Game</string>
    <string name="options">Options</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="more">More Apps</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Strings related to Settings -->

    <!-- Example General settings -->
    <string name="boardSettings">Board Settings</string>

    <string name="play_with_pc">Multiplayer</string>
    <string name="play_description">Select to play with another player
    </string>

    <string name="player_1_select">Your Name</string>
    <string name="player_2_select">Your friend\'s Name</string>
    <string name="default_player_1">Me</string>
    <string name="default_player_2">My friend</string>

    <string name="pref_title_add_friends_to_messages">Save Game</string>
    <string-array name="pref_example_list_titles">
        <item>Always</item>
        <item>When chosen</item>
        <item>Never</item>
    </string-array>
    <string-array name="pref_example_list_values">
        <item>1</item>
        <item>0</item>
        <item>-1</item>
    </string-array>

    <!-- Example settings for Notifications -->
    <string name="gameSettings">Game Settings</string>

    <string name="pref_title_new_message_notifications">New message notifications</string>

    <string name="pref_title_ringtone">Ringtone</string>
    <string name="pref_ringtone_silent">Silent</string>

    <string name="pref_title_vibrate">Vibrate</string>
</resources>
