<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.xenonapps.tejas.konnekt4.MainActivity">
    <item
        android:id="@+id/action_settings"
        android:orderInCategory="100"
        android:title="@string/action_settings"
        app:showAsAction="never" />
    <item
        android:id="@+id/choose"
        android:orderInCategory="100"
        android:title="@string/choose"
        app:showAsAction="never" />
    <item
        android:id="@+id/main"
        android:orderInCategory="100"
        android:title="@string/main"
        app:showAsAction="never" />
    <item
        android:id="@+id/options"
        android:orderInCategory="100"
        android:title="@string/options"
        app:showAsAction="never" />
    <item
        android:id="@+id/exit"
        android:orderInCategory="100"
        android:title="@string/exit"
        app:showAsAction="never" />
</menu>
