<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.xenonapps.tejas.konnekt4.WelcomeActivity"
    tools:showIn="@layout/activity_welcome">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/imageView"
        android:layout_gravity="center_horizontal"
        android:src="@drawable/welcomelogo"
        android:layout_marginTop="40dp" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/newGame"
        android:id="@+id/newGame"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="60dp"
        android:background="#0a4067"
        android:textColor="#ffffff"
        android:onClick="newGame"
        android:textSize="20dp"
        android:padding="15dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/load"
        android:id="@+id/load"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#0a4067"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:padding="15dp"
        android:textStyle="bold" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/options"
        android:id="@+id/options"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#0a4067"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:padding="15dp"
        android:textStyle="bold"
        android:onClick="options" />

    <Button
        android:layout_width="240dp"
        android:layout_height="wrap_content"
        android:text="@string/more"
        android:id="@+id/more"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="20dp"
        android:background="#0a4067"
        android:textColor="#ffffff"
        android:textSize="20dp"
        android:padding="15dp"
        android:textStyle="bold" />
</LinearLayout>
